--- a/client/src/App.css
+++ b/client/src/App.css
@@ -674,3 +674,29 @@ html {
     margin: auto;
     color: maroon;
   }
+  
+
+  @media only screen and (max-width: 450px) {
+    .col-5 {
+      flex: 0 0 41.666667%; 
+      max-width: 100%;
+    }
+  }
+
+  @media only screen and (max-width: 450px) {
+    .mb-3 {
+      margin-bottom: 0rem!important;
+    }
+  }
+
+  @media only screen and (max-width: 450px) {
+    .title {
+      font-size: 20px;
+      margin-top: 1px;
+      color: maroon;
+    }
+  }
+
+
+
+
