--- a/client/src/App.css
+++ b/client/src/App.css
@@ -47,6 +47,12 @@ html {
     box-shadow: 2px 2px 2px rgb(68, 65, 65);
     margin-top: -10px;
   }  
+
+  .dashboardTitle2 {
+    text-shadow: .5px .5px .5px whitesmoke;
+    background-color: rgb(199, 179, 179);
+    box-shadow: 2px 2px 2px rgb(68, 65, 65);
+  }  
   
   .forSaleTitle {
     text-shadow: .5px .5px .5px rgb(85, 85, 85);
@@ -171,11 +177,6 @@ html {
   /* -----------------table styling------------------- */
   tr {
     border: 1px 1px 1px maroon;
-  }
-
-  td {
-    max-width: 40px;
-    padding-left: 10px;
   }
   
   .tableBackground {
@@ -726,3 +727,5 @@ html {
   .leftPad {
     padding-left: 20px;
   }
+
+  
