--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,3 +9,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+
+body {
+  /* background-image: linear-gradient(to bottom, rgb(138, 138, 153), rgb(160, 156, 156)); */
+}
