--- a/client/src/App.css
+++ b/client/src/App.css
@@ -821,7 +821,7 @@ html {
   }
  
   .heroImage {
-    background-image: url('./components/gerberFixedBlade.jpg');
+    background-image: url('./components/fullpage2.jpg');
     background-color: #cccccc;
     height: 723px;
     background-position: center;
@@ -886,7 +886,9 @@ html {
   transform: translate(-50%, -50%);
   color: white;
   font-size: 40px;
+  text-shadow: 2px 2px 2px black;
 }
+
                   @media only screen and (max-width: 1024px) {
                     .heroText {
                      font-size: 60px;
@@ -904,14 +906,14 @@ html {
                   }
                   @media only screen and (max-width: 700px) {
                     .heroText {
-                     font-size: 25px;
+                     font-size: 35px;
                     }
                   }
 
 .signInStyling {
   float: right;
   padding-right: 20px;
-  text-shadow: 2px 2px 8px whitesmoke;
+  text-shadow: 1px 1px 1px whitesmoke;
   color: maroon;
   cursor: pointer;
   font-size: 33px;
