--- a/client/src/App.css
+++ b/client/src/App.css
@@ -821,13 +821,12 @@ html {
   }
  
   .heroImage {
-    background-image: url('./components/fullpage2.jpg');
+    background-image: url('/fullpage2.jpg');
     background-color: #cccccc;
     height: 723px;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    /* position: relative; */
     z-index: -1;
 }
 
@@ -973,6 +972,7 @@ html {
 
 .homeStyling {
 background-color: whitesmoke;
+opacity: 100%
 }
 
 .aboutStyling {
@@ -1026,5 +1026,101 @@ background-color: whitesmoke;
 @media only screen and (max-width: 330px) {
   .addModalMargins {
     margin-top: -525px;;
+  }
+}
+
+.aboutPic {
+  background-image: url('/knifecollection1.jpg');
+  height: 100%;
+  width: 1024px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: fixed;
+  z-index: -1;
+  opacity: 25%;
+}
+
+.aboutHeader {
+color: #250e0e;
+text-shadow: 1px 1px 1px whitesmoke;
+padding: 5px 5px;
+}
+
+.aboutBody {
+color: #380a0a;
+padding: 5px;
+}
+
+.linkStyling {
+  color: rgba(70, 70, 70, 0.39);
+  background-color: currentcolor;
+  margin-top: 340px;
+  position: relative;
+}
+
+
+@media only screen and (max-width: 1024px) {
+  .linkStyling {
+   margin-top: 1090px;
+   font-size: 30px;
+  }
+}
+@media only screen and (max-width: 1000px) {
+  .linkStyling {
+    margin-top: 270px;
+    font-size: 15px;
+  }
+}
+@media only screen and (max-width: 775px) {
+  .linkStyling {
+    margin-top: 780px;
+    font-size: 20px;
+  }
+}
+@media only screen and (max-width: 450px) {
+  .linkStyling {
+    margin-top: 500px;
+    font-size: 18px;
+  }
+}
+@media only screen and (max-width: 412px) and (max-height: 850px) {
+  .linkStyling {
+    margin-top: 585px;
+    font-size: 18px;
+  }
+}
+            @media only screen and (max-width: 412px) and (max-height: 750px) {
+              .linkStyling {
+                margin-top: 500px;
+                font-size: 18px;
+              }
+            }
+@media only screen and (max-width: 380px) {
+  .linkStyling {
+    margin-top: 340px;
+  }
+}
+@media only screen and (max-width: 375px) and (max-height: 850px) {
+  .linkStyling {
+    margin-top: 560px;
+    font-size: 18px;
+  }
+}
+
+@media only screen and (max-width: 375px) and (max-height: 700px) {
+  .linkStyling {
+    margin-top: 420px;
+    font-size: 18px;
+  }
+}
+@media only screen and (max-width: 360px) {
+  .linkStyling {
+    margin-top: 390px;
+  }
+}
+@media only screen and (max-width: 330px) {
+  .linkStyling {
+    margin-top: 325px;
   }
 }
