--- a/client/src/App.css
+++ b/client/src/App.css
@@ -972,7 +972,7 @@ html {
 
 .homeStyling {
 background-color: whitesmoke;
-opacity: 100%
+/* opacity: 99% */
 }
 
 .aboutStyling {
@@ -1038,7 +1038,7 @@ background-color: whitesmoke;
   background-size: cover;
   position: fixed;
   z-index: -1;
-  opacity: 25%;
+  opacity: 26%;
 }
 
 .aboutHeader {
