--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1030,7 +1030,6 @@ background-color: whitesmoke;
 }
 
 .aboutPic {
-  opacity: 25%;
   background-image: url('/knifecollection1.jpg');
   height: 100%;
   width: 1024px;
@@ -1093,6 +1092,12 @@ padding: 5px;
             @media only screen and (max-width: 412px) and (max-height: 750px) {
               .linkStyling {
                 margin-top: 500px;
+                font-size: 18px;
+              }
+            }
+            @media only screen and (max-width: 412px) and (max-height: 650px) {
+              .linkStyling {
+                margin-top: 380px;
                 font-size: 18px;
               }
             }
