--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1089,18 +1089,13 @@ padding: 5px;
     font-size: 18px;
   }
 }
-            @media only screen and (max-width: 412px) and (max-height: 750px) {
+            @media only screen and (max-width: 412px) and (max-height: 800apx) {
               .linkStyling {
                 margin-top: 500px;
                 font-size: 18px;
               }
             }
-            @media only screen and (max-width: 412px) and (max-height: 650px) {
-              .linkStyling {
-                margin-top: 380px;
-                font-size: 18px;
-              }
-            }
+       
 @media only screen and (max-width: 380px) {
   .linkStyling {
     margin-top: 340px;
