--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1089,7 +1089,7 @@ padding: 5px;
     font-size: 18px;
   }
 }
-            @media only screen and (max-width: 412px) and (max-height: 800apx) {
+            @media only screen and (max-width: 412px) and (max-height: 800px) {
               .linkStyling {
                 margin-top: 470px;
                 font-size: 18px;
