--- a/client/src/App.css
+++ b/client/src/App.css
@@ -781,7 +781,6 @@ html {
     cursor: pointer;
     padding-right: 70px;
   }
-
   @media only screen and (max-width: 1024px) {
     .show2 {
       padding-right: 100px;
@@ -829,7 +828,6 @@ html {
     background-size: cover;
     z-index: -1;
 }
-
 @media only screen and (max-width: 1024px) {
   .heroImage {
    height: 1366px;
@@ -887,27 +885,26 @@ html {
   font-size: 40px;
   text-shadow: 2px 2px 2px black;
 }
-
-                  @media only screen and (max-width: 1024px) {
+@media only screen and (max-width: 1024px) {
                     .heroText {
                      font-size: 60px;
                     }
-                  }
-                  @media only screen and (max-width: 1000px) {
+}
+@media only screen and (max-width: 1000px) {
                     .heroText {
                      font-size: 25px;
                     }
-                  }
-                  @media only screen and (max-width: 800px) {
+}
+@media only screen and (max-width: 800px) {
                     .heroText {
                      font-size: 40px;
                     }
-                  }
-                  @media only screen and (max-width: 700px) {
+}
+@media only screen and (max-width: 700px) {
                     .heroText {
                      font-size: 35px;
                     }
-                  }
+}
 
 .signInStyling {
   float: right;
@@ -917,12 +914,10 @@ html {
   cursor: pointer;
   font-size: 33px;
 }
-
 .signInStyling:hover {
   color: rgb(51, 1, 1);
   text-decoration: none;
 }
-
 @media only screen and (max-width: 1024px) {
   .signInStyling {
    font-size: 60px;
@@ -938,11 +933,11 @@ html {
     font-size: 40px;
   }
 }
-          @media only screen and (max-width: 700px) {
+@media only screen and (max-width: 700px) {
             .signInStyling {
               font-size: 25px;
             }
-          }
+}
  
   a:hover {
     text-decoration: none;
@@ -1043,12 +1038,124 @@ background-color: whitesmoke;
 .aboutHeader {
 color: #250e0e;
 text-shadow: 1px 1px 1px whitesmoke;
-padding: 5px 5px;
+padding: 10px 10px;
+border-bottom: double whitesmoke;
 }
+@media only screen and (max-width: 1024px) {
+  .aboutHeader {
+   font-size: 95px;
+  }
+}
+@media only screen and (max-width: 1000px) {
+  .aboutHeader {
+    font-size: 50px;
+  }
+}
+@media only screen and (max-width: 775px) {
+  .aboutHeader {
+    font-size: 75px;
+  }
+}
+@media only screen and (max-width: 450px) {
+  .aboutHeader {
+    font-size: 55px;
+  }
+}
+@media only screen and (max-width: 412px) and (max-height: 850px) {
+  .aboutHeader {
+    font-size: 60px;
+  }
+}
+@media only screen and (max-width: 412px) and (max-height: 800px) {
+  .aboutHeader {
+    font-size: 55px;
+  }
+}
+@media only screen and (max-width: 380px) {
+  .aboutHeader {
+    font-size: 18px;
+  }
+}
+@media only screen and (max-width: 375px) and (max-height: 850px) {
+  .aboutHeader {
+    font-size: 60px;
+  }
+}
+@media only screen and (max-width: 375px) and (max-height: 700px) {
+  .aboutHeader {
+    font-size: 50px;
+  }
+}
+@media only screen and (max-width: 360px) {
+  .aboutHeader {
+    font-size: 45px;
+  }
+}
+@media only screen and (max-width: 330px) {
+  .aboutHeader {
+    font-size: 40px;
+  }
+}
+
 
 .aboutBody {
 color: #380a0a;
 padding: 5px;
+}
+@media only screen and (max-width: 1024px) {
+  .aboutBody {
+   font-size: 50px;
+  }
+}
+@media only screen and (max-width: 1000px) {
+  .aboutBody {
+    font-size: 25px;
+  }
+}
+@media only screen and (max-width: 775px) {
+  .aboutBody {
+    font-size: 42px;
+  }
+}
+@media only screen and (max-width: 450px) {
+  .aboutBody {
+    font-size: 30px;
+  }
+}
+@media only screen and (max-width: 412px) and (max-height: 850px) {
+  .aboutBody {
+    font-size: 25px;
+  }
+}
+@media only screen and (max-width: 412px) and (max-height: 800px) {
+  .aboutBody {
+    font-size: 25px;
+  }
+}
+@media only screen and (max-width: 380px) {
+  .aboutBody {
+    font-size: 18px;
+  }
+}
+@media only screen and (max-width: 375px) and (max-height: 850px) {
+  .aboutBody {
+    font-size: 30px;
+  }
+}
+@media only screen and (max-width: 375px) and (max-height: 700px) {
+  .aboutBody {
+    font-size: 25px;
+  }
+}
+@media only screen and (max-width: 360px) {
+  .aboutBody {
+    font-size: 22px;
+  }
+}
+@media only screen and (max-width: 330px) {
+  .aboutBody {
+    font-size: 20px;
+  }
 }
 
 .linkStyling {
@@ -1057,45 +1164,42 @@ padding: 5px;
   margin-top: 340px;
   position: relative;
 }
-
-
 @media only screen and (max-width: 1024px) {
   .linkStyling {
-   margin-top: 1090px;
+   margin-top: 899px;
    font-size: 30px;
   }
 }
 @media only screen and (max-width: 1000px) {
   .linkStyling {
-    margin-top: 270px;
+    margin-top: 218px;
     font-size: 15px;
   }
 }
 @media only screen and (max-width: 775px) {
   .linkStyling {
-    margin-top: 780px;
+    margin-top: 589px;
     font-size: 20px;
   }
 }
 @media only screen and (max-width: 450px) {
   .linkStyling {
-    margin-top: 500px;
+    margin-top: 348px;
     font-size: 18px;
   }
 }
 @media only screen and (max-width: 412px) and (max-height: 850px) {
   .linkStyling {
-    margin-top: 585px;
+    margin-top: 485px;
     font-size: 18px;
   }
 }
-            @media only screen and (max-width: 412px) and (max-height: 800px) {
-              .linkStyling {
-                margin-top: 520px;
-                font-size: 18px;
-              }
-            }
-       
+@media only screen and (max-width: 412px) and (max-height: 800px) {
+  .linkStyling {
+    margin-top: 400px;
+    font-size: 18px;
+  }
+}
 @media only screen and (max-width: 380px) {
   .linkStyling {
     margin-top: 340px;
@@ -1103,24 +1207,23 @@ padding: 5px;
 }
 @media only screen and (max-width: 375px) and (max-height: 850px) {
   .linkStyling {
-    margin-top: 560px;
+    margin-top: 417px;
     font-size: 18px;
   }
 }
-
 @media only screen and (max-width: 375px) and (max-height: 700px) {
   .linkStyling {
-    margin-top: 420px;
+    margin-top: 341px;
     font-size: 18px;
   }
 }
 @media only screen and (max-width: 360px) {
   .linkStyling {
-    margin-top: 390px;
+    margin-top: 332px;
   }
 }
 @media only screen and (max-width: 330px) {
   .linkStyling {
-    margin-top: 325px;
+    margin-top: 273px;
   }
 }
