--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1141,7 +1141,7 @@ padding: 5px;
 }
 @media only screen and (max-width: 375px) and (max-height: 850px) {
   .aboutBody {
-    font-size: 30px;
+    font-size: 24px;
   }
 }
 @media only screen and (max-width: 375px) and (max-height: 700px) {
@@ -1163,70 +1163,62 @@ padding: 5px;
 .linkStyling {
   color: rgba(70, 70, 70, 0.39);
   background-color: currentcolor;
-  position: fixed;
-  bottom: 0;
-  width: 100%;
 }
-/* @media only screen and (max-width: 1024px) {
+@media only screen and (max-width: 1024px) {
   .linkStyling {
-   margin-top: 899px;
    font-size: 30px;
   }
 }
 @media only screen and (max-width: 1000px) {
   .linkStyling {
-    margin-top: 218px;
     font-size: 15px;
   }
 }
 @media only screen and (max-width: 775px) {
   .linkStyling {
-    margin-top: 589px;
     font-size: 20px;
   }
 }
 @media only screen and (max-width: 450px) {
   .linkStyling {
-    margin-top: 348px;
     font-size: 18px;
   }
 }
 @media only screen and (max-width: 412px) and (max-height: 850px) {
   .linkStyling {
-    margin-top: 485px;
     font-size: 18px;
   }
 }
 @media only screen and (max-width: 412px) and (max-height: 800px) {
   .linkStyling {
-    margin-top: 400px;
     font-size: 18px;
   }
 }
 @media only screen and (max-width: 380px) {
   .linkStyling {
-    margin-top: 340px;
   }
 }
 @media only screen and (max-width: 375px) and (max-height: 850px) {
   .linkStyling {
-    margin-top: 417px;
     font-size: 18px;
   }
 }
 @media only screen and (max-width: 375px) and (max-height: 700px) {
   .linkStyling {
-    margin-top: 341px;
     font-size: 18px;
   }
 }
 @media only screen and (max-width: 360px) {
   .linkStyling {
-    margin-top: 332px;
   }
 }
 @media only screen and (max-width: 330px) {
   .linkStyling {
-    margin-top: 273px;
   }
-} */
+}
+
+footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
