--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1160,6 +1160,11 @@ padding: 5px;
   }
 }
 
+.linkStyling1 {
+  color: rgba(0, 0, 0, 0.05);;
+  background-color: currentcolor;
+}
+
 .linkStyling {
   color: rgba(70, 70, 70, 0.39);
   background-color: currentcolor;
